--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="/Assignment-1/JS/index.js" async defer></script>
+        <script src="./JS/index.js" async defer></script>
     </body>
 </html>
